Fix some styling and text overflow issues

--- a/public/stylesheets/new-ui-styles.css
+++ b/public/stylesheets/new-ui-styles.css
@@ -675,7 +675,7 @@ body.t-s12 {
 
 .o-autobuyer-input,
 .c-autobuyer-box__mode-select {
-  color: var(--color-accent);
+  color: var(--color-text);
   background: var(--color-base);
   border: 0.1rem solid var(--color-accent);
 }
